# autogen-course

./: .gitignore  Prompt Template (Universal Agent).md  README.md  chat-LocalLLMIntegrationIssues.txt  hackernews.csv  hackernews.xlsx  image_downloader.md  image_downloader.py  image_ranker_agent02.py  image_ranker_agent04.py  image_selection.py  main.py  output_suggestion_url.json  profile_checker.py  pyproject.toml  readme-chatterbox.md  story_image_agent.py  task.md  test.py  test03.py  test07.py  test08.py
NeuralFalcon/: Remove-Silence-From-Audio.py
agentic_example/: example01.md  example01.py
autogen-example/: chat-Transcript Based Image Suggestions.txt  idea.md  image_ranker_agent.py  image_ranker_agent01.py  image_ranker_agent03.py  masterpiece_audio_visual_enricher.py  test01.py  test02.py  test04.py  test05.py  test06.py
common-example/: input.json  output.json  readme-chatterbox.md  tss_test.py  url_test.py
ffmpeg-learning/: chat-FFmpeg learning.md  readm.md  readme.md  timeline.md
idea-testing/: script.txt
image_ranker_agent05/: image_ranker_agent05.py  input.json
image_suggestion_system/: chagpt.md  chat-B-Roll Footage Keyword System.md  enriched_script.json  enriched_script_clean.json  example01.py  format.md  format01.md  motivation_stroytelling.md  niche.md  output.json  output_spacy.json  qwen_result.json  reference_data.json  reference_idea01.md  reference_scrip.md
moviepy-tutorial/: example01.py  example02.py  example03.py  example04.py  example05.py  example06.py  example07.py
playw-example/: colab_additional_option.py  colab_main.py  (+9 more)
(+3832 files in other folders)
