[project]
name = "autogen-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "autogen-agentchat>=0.7.4",
    "autogen-ext[openai]>=0.7.4",
    "beautifulsoup4>=4.13.5",
    "gradio-client>=1.13.0",
    "jinja2>=3.1.6",
    "openpyxl>=3.1.5",
    "patchright>=1.55.1",
    "playwright>=1.55.0",
    "sentence-transformers>=5.1.0",
    "spacy>=3.8.7",
    "tenacity>=9.1.2",
]
